adjusting the YouTube video links

--- a/meetings/2023/202301.md
+++ b/meetings/2023/202301.md
@@ -16,6 +16,8 @@ Amateur Operators KN6KZF & K6EAU (a.k.a. Rikke & Beau) enjoy cruising the air wa
 
 Steve Wilson, K6WW, is a native Californian who has lived in the SF Bay Area for the last 33 years. Steve's godfather, Alan Young (SK K6KLL), a former broadcast engineer, got him into the hobby in 2001 when Steve got his Technician license. He upgraded to General in 2010 and Extra in 2016. He's a former ARES Emergency Coordinator for Fremont and former President (2014-2016) and current Vice President (2023) of the South Bay Amateur Radio Association (SBARA). He's also a member of the Parachute Mobile support team.
 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/ckgzbL9qBMw?si=E-hYrQDHRG8labqX" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
 ## Presentation materials
 
 {% include meetings-template.md %}
