--- a/meetings/2023/202302.md
+++ b/meetings/2023/202302.md
@@ -13,6 +13,8 @@ From this presentation, you'll learn about two versions of the BBTD: one that fi
 
 Corey Ruth, KD3CR, is the president of the Queen Anne's Amateur Radio Club in Centreville, MD. His other affiliations include Queen Anne's County RACES, Potomac Valley Radio Club (which focuses on contesting) and the Los Alamos Amateur Radio Club. Corey got his tech license in 2016, upgraded to general in 2017 and to amateur extra in 2020. Living in an HOA-restricted townhouse, he has a keen interest in stealth antennas, believing that every ham     regardless of residence should be able to experience the joy of working the HF bands.
 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/BNjMNDSAUKE?si=SJYbIHIdZA_9scvn" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
 ## Presentation materials
 
 {% include meetings-template.md %}
