--- a/meetings/2023/202303.md
+++ b/meetings/2023/202303.md
@@ -13,7 +13,6 @@ Mike has been an active Amateur since 1974 and loving every minute of it. From R
 
 ## Presentation materials
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/D8qWc20yGoY?si=iWakpciVssNGeqPl" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-
+<iframe width="560" height="315" src="https://www.youtube.com/embed/D8qWc20yGoY?si=DBkoHMhpI3VSWZuL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 {% include meetings-template.md %}
 
