--- a/meetings/2023/202305.md
+++ b/meetings/2023/202305.md
@@ -27,7 +27,7 @@ Jeri and Amy will share details about how they created the badge and the learnin
 
 ## Presentation materials
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/1Ao9ya-2Fpk?si=2O5G-7yng4gTxu6g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/1Ao9ya-2Fpk?si=pK6J_EjwgiWpcR0B" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 {% include meetings-template.md %}
 
