--- a/meetings/2023/202306.md
+++ b/meetings/2023/202306.md
@@ -13,7 +13,7 @@ Jeff became interested in RFI about ten years ago when RFI affected his ability 
 
 ## Presentation materials
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/NqK_BIArIfs?si=usuJvYFCq2BQwXmw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/q59NXn-hqmk?si=33_1uQRTc0Dk_Sry" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 {% include meetings-template.md %}
 
