--- a/meetings/2024/202409.md
+++ b/meetings/2024/202409.md
@@ -11,6 +11,8 @@ The Adventure Radio Protocol provides a common radio frequency and tone signalin
 
 George Zafiropoulos, KJ6VU, is active in portable operating and building repeater control systems.   George is also the host of the Ham Radio Workbench Podcast focusing on technical topics of interest to the radio amateur.   George tells his story when he was interviewed by Eric Guth on the QSO Today podcast in episode 232 of <www.qsotoday.com/podcasts/kj6vu>
 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/XQgpc-OPa7s?si=7vnppsf5gbPwnD9x" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
 ## Presentation materials
 
 {% include meetings-template.md %}
