--- a/meetings/2025/202508.md
+++ b/meetings/2025/202508.md
@@ -1,9 +1,9 @@
-# __TITLE__
+# August Monthly Meeting
 
-* **Date**: `$month $day, 2025`
+* **Date**: `Aug 1, 2025`
 * **Time**: `07:00 PM Pacific Time`
-* **Topic**: `__TITLE__`
-* **Presenter**: `__PRESENTER__`
+* **Topic**: `August Monthly Meeting`
+* **Presenter**: `To be announced`
 
 ## Details
 
