--- a/meetings/2025/202511.md
+++ b/meetings/2025/202511.md
@@ -1,9 +1,9 @@
-# __TITLE__
+# November Monthly Meeting
 
-* **Date**: `$month $day, 2025`
+* **Date**: `Nov 7, 2025`
 * **Time**: `07:00 PM Pacific Time`
-* **Topic**: `__TITLE__`
-* **Presenter**: `__PRESENTER__`
+* **Topic**: `November Monthly Meeting`
+* **Presenter**: `To be announced`
 
 ## Details
 
