--- a/meetings/2025/202507.md
+++ b/meetings/2025/202507.md
@@ -1,6 +1,6 @@
 # __TITLE__
 
-* **Date**: `$month $day, 2025`
+* **Date**: `July 11, 2025`
 * **Time**: `07:00 PM Pacific Time`
 * **Topic**: `__TITLE__`
 * **Presenter**: `__PRESENTER__`
