--- a/meetings/2025/202509.md
+++ b/meetings/2025/202509.md
@@ -1,9 +1,9 @@
-# __TITLE__
+# September Monthly Meeting
 
-* **Date**: `$month $day, 2025`
+* **Date**: `Sep 5, 2025`
 * **Time**: `07:00 PM Pacific Time`
-* **Topic**: `__TITLE__`
-* **Presenter**: `__PRESENTER__`
+* **Topic**: `September Monthly Meeting`
+* **Presenter**: `To be announced`
 
 ## Details
 
