change the template text for the upcoming 2025 meetings which don't have known presenters or topics

--- a/meetings/2025/202506.md
+++ b/meetings/2025/202506.md
@@ -1,8 +1,8 @@
-# __TITLE__
+# June Monthly Meeting
 
 * **Date**: `Jun 6, 2025`
 * **Time**: `07:00 PM Pacific Time`
-* **Topic**: `__TITLE__`
+* **Topic**: `June Monthly Meeting`
 * **Presenter**: `__PRESENTER__`
 
 ## Details
