--- a/meetings/2025/202507.md
+++ b/meetings/2025/202507.md
@@ -1,8 +1,8 @@
-# __TITLE__
+# July Monthly Meeting
 
 * **Date**: `July 11, 2025`
 * **Time**: `07:00 PM Pacific Time`
-* **Topic**: `__TITLE__`
+* **Topic**: `July Monthly Meeting`
 * **Presenter**: `__PRESENTER__`
 
 ## Details
