Add videos for the Oct, Nov and Dec meetings of 2024.

--- a/meetings/2024/202410.md
+++ b/meetings/2024/202410.md
@@ -11,7 +11,9 @@ Amateur Radio aboard the USS Hornet. The USS Hornet Radio Club NB6GC. My present
 
 I was originally licensed in 1977 as WD6ERA and have held a extra class license since the age of 14. I was manager of HRO Burlingame in the mid 80's through when the store was moved to Sunnyvale. I worked for over 20 years as a residential real estate appraiser for World Savings and Bank of America in San Mateo and Santa Clara counties. I now work in customer service/sales or Remtronix, the exclusive North American Distributor for Alinco amateur radio products. I am currently living in Redwood City with my fiance Claudia KN6REV.
 
-I am the have been president of HARC, the USS Hornet Amateur Radio Club for the last four years. 
+I am the have been president of HARC, the USS Hornet Amateur Radio Club for the last four years.
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/GaKZCTbDPJU?si=jnRjSaHlllddl-AR" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 ## Presentation materials
 
