--- a/meetings/2024/202411.md
+++ b/meetings/2024/202411.md
@@ -11,6 +11,8 @@
 
 Katrina is an Emergency Room Doctor. When she is not tending to the needs of her patients she provides another type of medicine with the help of MJ, a Therapy Dog.   It can be confusing how all the different service and support animals function. Katrina will break it down to give you a better understanding.
 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/fgm1GCjV6BA?si=9m6VK-HLDeK9WW2c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
 ## Presentation materials
 
 {% include meetings-template.md %}
