--- a/meetings/2024/202412.md
+++ b/meetings/2024/202412.md
@@ -9,6 +9,7 @@
 
 Wayne Burdick, N6KR, is Elecraft's Chief Technology Officer and a principal designer of the company's transceivers (K1, K2, K3, K4, KX1, KX2, KX3, KH1) and antennas (AX1, AX2, and accessories). Prior to founding Elecraft with Eric Swartz, WA6HHQ, Wayne created the Wilderness Radio line (NorCal 40A, Sierra, and SST), refinements of his NorCal QRP Club designs. Wayne and Eric have both been inducted into the QRP Hall of Fame, and also jointly received the ARRL's Technical Excellence Award for their Elecraft designs. Wayne holds a degree in Cognitive Science from U.C. San Diego. He has worked for many years as a software/hardware engineer, specializing in RF design, firmware, user interface, and 3D modeling. In his spare time he goes on long hikes, writes fiction, and plays acoustic guitar.
 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/yjnrGXI0IXE?si=84MRfSd9oa7q_0Js" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 ## The Raffle is Back
 
