--- a/meetings/2025/202502.md
+++ b/meetings/2025/202502.md
@@ -7,7 +7,7 @@
 
 ## Details
 
-Ben Eadie, VE6SFX, also known as Ham Radio Rookie on YouTube and host of vfcomms.com.   He is the creator of the FARA-J Antenna and is currently working on other creative ham radio gear.
+Ben Eadie, VE6SFX, also known as Ham Radio Rookie on YouTube and host of <vfcomms.com>.   He is the creator of the FARA-J Antenna and is currently working on other creative ham radio gear.
 
 For this presentation Ben will go over the design and characteristics of a portable slot antenna. He is currently fine-tuning a slot antenna kit and hoping to have it available soon.
 
@@ -20,6 +20,8 @@ Slot antennas have long been recognized as a highly effective design.
 Historically, they were difficult to construct due to fabrication challenges and the high cost of materials. However, with today's materials and techniques, they've become surprisingly accessible and affordable. This opens the door for experimentation and innovation like never before.
 
 I've discovered that while antenna calculations are important, real-world, empirical testing often delivers surprising results that deviate from theoretical predictions. My approach is simple: find a design, iterate, test, and learn. With just a few inexpensive materials craft knives, connectors, and Faraday tape you can build and test antennas that rival far more complex designs. Slot antennas, in particular, are a fantastic starting point because of their proven performance and adaptability to modern materials.
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/46F2x1DjUJI?si=LOFeAwfzxnW86ciu" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 ## Presentation materials
 
