--- a/meetings/2022/202204.md
+++ b/meetings/2022/202204.md
@@ -11,6 +11,8 @@ Brian will be discussing what Pico-Ballooning is and how it differs from other t
 
 I'm an Extra Class operator, Assistant DEC for ARES High Desert (LAX Section), VP of the Acton Agua-Dulce ARC and I work as a Hydroelectric Power plant Technician. I also manage two Winlink Gateways and I am trustee for two local repeaters.
 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/Q9-Dz2CXl2Y?si=uVV0MKQBFlamMObM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
 ## Presentation materials
 
 {% include meetings-template.md %}
