--- a/meetings/2022/202205.md
+++ b/meetings/2022/202205.md
@@ -11,6 +11,7 @@ In this presentation, George will describe the process of design, theory of oper
 
 Bio: George has been a ham since 1972. He has a wide variety of radio interests including home brewing, QRP, and repeater building. His current station is a Flex 6400, an Elecraft K3, and a modest 6 band vertical (6BTV) and several QRP rigs. His favorite mode is HF CW and he can be found on DMR talk group 31075. George is the designer of the Sierra Radio Systems repeater control systems and the PackTenna line of portable antennas.  George is also the co-host of the Ham Radio Workbench podcast. You can listen to over 150 episodes of the show on any podcast player or directly from website <https://www.hamradioworkbench.com>  Additionally, George was honored to be interviewed by Eric Guth, 4Z1UG, on Eric’s QSO Today Amateur Radio Podcast. You can hear that interview  at <https://www.qsotoday.com/podcasts/kj6vu>
 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/Pvy48m15tnc?si=vSUeybgDwrWC7LwB" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 ## Presentation materials
 
