--- a/meetings/2022/202206.md
+++ b/meetings/2022/202206.md
@@ -13,5 +13,7 @@ Cindy works as a professional civil engineer designing water and wastewater infr
 
 ## Presentation materials
 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/x0G_mz8HPLA?si=_9mhv8EVe8Y31kHk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
 {% include meetings-template.md %}
 
