Adding YouTube videos for July-November 2022. (#9)
Adding YouTube videos for July-November 2022.

--- a/meetings/2022/202207.md
+++ b/meetings/2022/202207.md
@@ -11,6 +11,8 @@ In this presentation, Fred will demonstrate the software he uses to design or le
 
 Fred (W6BSD) is a recently licensed ham; he got his general and extra license in 2017. His ham radio interests range from rag-chewing on HF to digital radio. Fred enjoys tinkering, building, and experimenting. Since day one, ham radio has been a constant learning journey about electronics and antennas.
 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/i-_13OX-Rpg?si=_twyAp3xL_K_R4q9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
 ## Presentation materials
 
 {% include meetings-template.md %}
