--- a/meetings/2022/202209.md
+++ b/meetings/2022/202209.md
@@ -9,6 +9,8 @@
 
 Kevin Zanjani is the National Sales Manager with Bioenno Power. His presentation will discuss LiFePO4 batteries and solar applications for Amateur Radio Applications. Bioenno Power products has been profiled in various articles including QST and CQ magazines. This exciting presentation will discuss applications of the batteries and some frequently asked questions. 
 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/l2gteBSxV7M?si=odl2GWfhqGD9-2w8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
 ## Presentation materials
 
 {% include meetings-template.md %}
