--- a/meetings/2022/202210.md
+++ b/meetings/2022/202210.md
@@ -20,6 +20,7 @@ An Accredited Examiner in Canada and the USA, he gave the first remote Canadian 
  It's Go-Kit Night
               Have you made a go-kit? Bring it to the meeting and show it off.
  
+<iframe width="560" height="315" src="https://www.youtube.com/embed/P2w0M8mDTcQ?si=1PWn5r8-n-Ppi4xv" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 {% include meetings-template.md %}
 
