--- a/meetings/2022/202211.md
+++ b/meetings/2022/202211.md
@@ -14,6 +14,8 @@ In this presentation we'll take a look at the different methods, with a more det
 
 We'll also do a live demo using my OH1G remote station in Finland.
 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/e-mQTBoN0Og?si=eiGfiuC5gZ6O0OXj" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
 ## Presentation materials
 
 {% include meetings-template.md %}
