--- a/meetings/2022/202208.md
+++ b/meetings/2022/202208.md
@@ -7,6 +7,8 @@
 
 ## Details
 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/OYXkyeJQ4gM?si=ECCqD_sSZEzsA5Vb" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
 ## Presentation materials
 
 {% include meetings-template.md %}
