Expand the past meetings, showing the topic and possibly whether we have a recording posted on YouTube  (#16)
* create a script to parse meetings to extract (1) presenter name, (2) topic, and (3) whether we have a recording for it. Also update the list of past meetings to be more verbose

* change a little bit the formatting

* more formatting work, plus fixing teh links to html instead of md which was not working

* trim down the future meetings from the list containing all past meetings

* more formatting work

* more formatting work

* more formatting work, replace text with Youtube icon

* change youtube icon

* getting rid of images, as they break the lines

* try to collapse 2022

* details doesn't work with markdown, reverting

* move recording comment at the end of the line

* using <mark> for recording hint

--- a/meetings/2023/202304.md
+++ b/meetings/2023/202304.md
@@ -3,7 +3,7 @@
 * **Date**: `Apr 7, 2023`
 * **Time**: `07:00 PM Pacific Time`
 * **Topic**: `HOMEBREW NIGHT`
-* **Presenter**: ``
+* **Presenter**: `Many, not just one`
 
 ## Details
 
