--- a/meetings/2025/202506.md
+++ b/meetings/2025/202506.md
@@ -3,7 +3,7 @@
 * **Date**: `Jun 6, 2025`
 * **Time**: `07:00 PM Pacific Time`
 * **Topic**: `June Monthly Meeting`
-* **Presenter**: `__PRESENTER__`
+* **Presenter**: `To be announced`
 
 ## Details
 
