--- a/meetings/2025/202507.md
+++ b/meetings/2025/202507.md
@@ -3,7 +3,7 @@
 * **Date**: `July 11, 2025`
 * **Time**: `07:00 PM Pacific Time`
 * **Topic**: `July Monthly Meeting`
-* **Presenter**: `__PRESENTER__`
+* **Presenter**: `To be announced`
 
 ## Details
 
