--- a/meetings/2021/202110.md
+++ b/meetings/2021/202110.md
@@ -15,6 +15,7 @@ Michael T. Workman is a filmmaker, film programmer, and organizer based in San F
 
 Workman grew up living between a trailer park and a house without wheels in Missoula, Montana. Having experienced his family's struggle with addiction and surviving on a low income, issues of exploitation and class are central to his concerns in art and organizing. His documentary From Parts Unknown follows Jesse, whose dire need to cope with PTSD led him to find an outlet in the hard-won expression of underground professional wrestling. The film won the Grand Jury Prize at the Northwest Film Festival and is distributed by Real Stories and Means TV. His latest documentary, Favor & Grace, was a collaboration with Oakland-based artist Adrian L Burrell; the film explores the damage inflicted on families affected by police violence. Favor & Grace screened at festivals around the world and is distributed by Means TV.
 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/uNgKHAKnyUQ?si=GAnmY3nUfS3aUPY_" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 ## Presentation materials
 
