--- a/meetings/2025/202505.md
+++ b/meetings/2025/202505.md
@@ -15,6 +15,7 @@ I became a licensed skydiver in 2012, a radio amateur in 2019. I love experiment
 
 ## Presentation materials
 
+* *PDF*: [[download](https://github.com/PAARA-org/paara.org-attachments/blob/main/meetings/2025/202505-SDRs-Good-Quality.pdf?raw=true)] [[Docs Viewer](https://docs.google.com/viewer?url=https://github.com/PAARA-org/paara.org-attachments/blob/main/meetings/2025/202505-SDRs-Good-Quality.pdf?raw=true)]
 
 {% include meetings-template.md %}
 
