Add topic for June 2026 meeting. (#31)
* Adding meeting details for June 2025

--- a/meetings/2025/202506.md
+++ b/meetings/2025/202506.md
@@ -2,10 +2,15 @@
 
 * **Date**: `Jun 6, 2025`
 * **Time**: `07:00 PM Pacific Time`
-* **Topic**: `June Monthly Meeting`
-* **Presenter**: `To be announced`
+* **Topic**: `The Legacy of Trans-Pacific Radio`
+* **Presenter**: `Richard Dillman (W6AWO)`
 
 ## Details
+
+Richard Dillman [W6AWO](https://www.qrz.com/db/W6AWO), President of the **Maritime Radio Historical Society**, shares the story of the pioneering radio stations built by the American Marconi Company in 1914. These stations, with powerful transmitters in Bolinas and a mile-long receiving antenna in Marshall, were engineered to send and receive signals across the Pacific. Dillman explains how these stations were constructed, their evolution over time, and the reasons their service ended in 1973. 
+
+![image](/meetings/2025/202505-guest-speaker.jpg)
+
 
 ## Presentation materials
 
