testing the HTML <summary> tag

--- a/meetings/2025/202506.md
+++ b/meetings/2025/202506.md
@@ -7,10 +7,16 @@
 
 ## Details
 
-Richard Dillman [W6AWO](https://www.qrz.com/db/W6AWO), President of the **Maritime Radio Historical Society**, shares the story of the pioneering radio stations built by the American Marconi Company in 1914. These stations, with powerful transmitters in Bolinas and a mile-long receiving antenna in Marshall, were engineered to send and receive signals across the Pacific. Dillman explains how these stations were constructed, their evolution over time, and the reasons their service ended in 1973. 
+**Richard Dillman** [W6AWO](https://www.qrz.com/db/W6AWO), President of the **Maritime Radio Historical Society**, shares the story of the pioneering radio stations built by the American Marconi Company in 1914. These stations, with powerful transmitters in Bolinas and a mile-long receiving antenna in Marshall, were engineered to send and receive signals across the Pacific. Dillman explains how these stations were constructed, their evolution over time, and the reasons their service ended in 1973. 
 
 ![image](/meetings/2025/202506-guest-speaker.jpg)
 
+## Raffle
+
+<details>
+  <summary>Epcot Center</summary>
+  <p>Epcot is a theme park at Walt Disney World Resort featuring exciting attractions, international pavilions, award-winning fireworks and seasonal special events.</p>
+</details>
 
 ## Presentation materials
 
