try to create a table, without images first

--- a/meetings/2025/202506.md
+++ b/meetings/2025/202506.md
@@ -14,8 +14,23 @@
 ## Raffle
 
 <details>
-  <summary>Epcot Center</summary>
-  <p>Epcot is a theme park at Walt Disney World Resort featuring exciting attractions, international pavilions, award-winning fireworks and seasonal special events.</p>
+  <summary><b>Click to see the prizes!</b></summary>
+  <table>
+    <tr>
+        <th>1st prize</th>
+        <th>2nd prize</th>
+        <th>3rd prize</th>
+        <th>4th prize</th>
+        <th>5th prize</th>
+    </tr>
+    <tr>
+        <td>BioEnno 12v, 12Ah, LiFePo4 Battery</td>
+        <td>Surecom SW28 VSWR & Power Meter</td>
+        <td>Mike, K6QFO dual band dipole</td>
+        <td>GR-ARB01 Versatile Antenna Roll Bag</td>
+        <td>Nite Ize CamJam Tie Down Strap</td>
+    </tr>
+  </table>  
 </details>
 
 ## Presentation materials
