adding raffle images

--- a/meetings/2025/202506.md
+++ b/meetings/2025/202506.md
@@ -24,7 +24,14 @@
         <th>5th prize</th>
     </tr>
     <tr>
-        <td>BioEnno 12v, 12Ah, LiFePo4 Battery</td>
+        <td><img src=/meetings/2025/raffle/202506-1.jpeg" alt="image"></td>
+        <td><img src=/meetings/2025/raffle/202506-2.jpeg" alt="image"></td>
+        <td><img src=/meetings/2025/raffle/202506-3.jpeg" alt="image"></td>
+        <td><img src=/meetings/2025/raffle/202506-4.jpeg" alt="image"></td>
+        <td><img src=/meetings/2025/raffle/202506-5.jpeg" alt="image"></td>
+    </tr>
+    <tr>
+        <td>Bioenno 12v, 12Ah, LiFePo4 Battery</td>
         <td>Surecom SW28 VSWR & Power Meter</td>
         <td>Mike, K6QFO dual band dipole</td>
         <td>GR-ARB01 Versatile Antenna Roll Bag</td>
