fixing small typo :D

--- a/meetings/2025/202506.md
+++ b/meetings/2025/202506.md
@@ -24,11 +24,11 @@
         <th>5th prize</th>
     </tr>
     <tr>
-        <td><img src=/meetings/2025/raffle/202506-1.jpeg" alt="image"></td>
-        <td><img src=/meetings/2025/raffle/202506-2.jpeg" alt="image"></td>
-        <td><img src=/meetings/2025/raffle/202506-3.jpeg" alt="image"></td>
-        <td><img src=/meetings/2025/raffle/202506-4.jpeg" alt="image"></td>
-        <td><img src=/meetings/2025/raffle/202506-5.jpeg" alt="image"></td>
+        <td><img src="/meetings/2025/raffle/202506-1.jpeg" alt="image"></td>
+        <td><img src="/meetings/2025/raffle/202506-2.jpeg" alt="image"></td>
+        <td><img src="/meetings/2025/raffle/202506-3.jpeg" alt="image"></td>
+        <td><img src="/meetings/2025/raffle/202506-4.jpeg" alt="image"></td>
+        <td><img src="/meetings/2025/raffle/202506-5.jpeg" alt="image"></td>
     </tr>
     <tr>
         <td>Bioenno 12v, 12Ah, LiFePo4 Battery</td>
