say raffle prizes and not just prizes

--- a/meetings/2025/202506.md
+++ b/meetings/2025/202506.md
@@ -14,7 +14,7 @@
 ## Raffle
 
 <details>
-  <summary><b>Click to see the prizes!</b></summary>
+  <summary><b>Click to see the raffle prizes!</b></summary>
   <table>
     <tr>
         <th>1st prize</th>
