External link http://www.phonesat.org failed: got a time out (response code 301), so I'm removing the URL

--- a/meetings/2013/201309.md
+++ b/meetings/2013/201309.md
@@ -10,7 +10,7 @@
 PhoneSat is a nanosatellite, with a mass between one and ten kilograms and has a volume of around one liter. The PhoneSat Project strives to decrease the cost of satellites while not sacrificing performance. In an effort to achieve this goal, the project is based around Commercial Off-The-Shelf (COTS) electronics to provide functionality for as many parts as possible while still creating a reliable satellite. This has resulted in satellites that cost under $8000 and that can survive in space as proven by our first LEO launch.
 
 ### How Amateur radio operators can help.
-PhoneSat satellites are emitting packets on the amateur radio spectrum to report different types of message. The details of these packets can be found on the packets page. If you are an amateur radio operator and you can receive these packets, you have the great opportunity to contribute to the project by submitting them. The dashboard page will give you all the information you need to track the satellites in real time. Visit the PhoneSat web site at <http://www.phonesat.org>.
+PhoneSat satellites are emitting packets on the amateur radio spectrum to report different types of message. The details of these packets can be found on the packets page. If you are an amateur radio operator and you can receive these packets, you have the great opportunity to contribute to the project by submitting them. The dashboard page will give you all the information you need to track the satellites in real time. Visit the PhoneSat web site at www phonesat org.
 
 ### Speaker Bio
 Ken is the Communications and Software Engineer for the PhoneSat team. He is a graduate of the University of Hawaii with a degree in Electrical Engineering. Ken is responsible for the integration and testing of the radios that will become a part of the satellite system.
