--- a/meetings/2025/202504.md
+++ b/meetings/2025/202504.md
@@ -11,6 +11,8 @@ Stealth Indoor, Attic and Exterior HF antennas.   Many of us have homes in Homeo
 
 Michael McClary, N6MO- Licensed since 1968, Retired from Lockheed Martin as Vice President,14 years ago.   BS Electrical Engineering, BS Computer Science and Master Business Administration. Lived and operated in non-HOA home but also HOA home, townhome and condo.
 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/_Km6BE1oNHc?si=RQZE9lcP4IUd8hp4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
 ## Presentation materials
 * *PDF*: [[download](https://github.com/PAARA-org/paara.org-attachments/blob/main/meetings/2025/202504_Stealth_HF_Antennas_McClary.pdf?raw=true)] [[Docs Viewer](https://docs.google.com/viewer?url=https://github.com/PAARA-org/paara.org-attachments/blob/main/meetings/2025/202504_Stealth_HF_Antennas_McClary.pdf?raw=true)]
 * *PPT*: [[download](https://github.com/PAARA-org/paara.org-attachments/blob/main/meetings/2025/202504_Stealth_HF_Antennas_McClary.ppt?raw=true)] [[Docs Viewer](https://docs.google.com/viewer?url=https://github.com/PAARA-org/paara.org-attachments/blob/main/meetings/2025/202504_Stealth_HF_Antennas_McClary.ppt?raw=true)]
