--- a/meetings/2025/202505.md
+++ b/meetings/2025/202505.md
@@ -13,6 +13,8 @@ I became a licensed skydiver in 2012, a radio amateur in 2019. I love experiment
 
 ![Hermes Lite](/meetings/2025/Hermes_Lite-2.jpg)
 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/QSTZjQAkoa0?si=y8uRxpuslyi3ozs2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
 ## Presentation materials
 
 * *PDF*: [[download](https://github.com/PAARA-org/paara.org-attachments/blob/main/meetings/2025/202505-SDRs-Good-Quality.pdf?raw=true)] [[Docs Viewer](https://docs.google.com/viewer?url=https://github.com/PAARA-org/paara.org-attachments/blob/main/meetings/2025/202505-SDRs-Good-Quality.pdf?raw=true)]
