--- a/meetings/2025/202506.md
+++ b/meetings/2025/202506.md
@@ -11,6 +11,8 @@
 
 ![image](/meetings/2025/202506-guest-speaker.jpg)
 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/5QrTYcUS4hU?si=GzVZlfq8PDnMZO7G" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
 ## Raffle
 
 <details>
