Make all external links open in new tabs (#69)
This PR was generated with:

```sh
find . -name "*md" -exec sed -i '' 's/\(\[[^])]*\](http.[^)]*)\)\([^\{]\)/\1{:target=\"_blank\"}\2/g' {} \;
```

Fixes #58,#59,#60,#61,#62,#63,#64,#65,#67

--- a/fieldday/2019.md
+++ b/fieldday/2019.md
@@ -4,6 +4,6 @@
 
 ## 29, 30 June 2019
 
-Click [here](https://drive.google.com/file/d/1X7B8sa8REHGBw8mC9BH9r5ne6pVJisfG/view?usp=drive_link) to view the time-lapse for the 40m beam and tower installation.
+Click [here](https://drive.google.com/file/d/1X7B8sa8REHGBw8mC9BH9r5ne6pVJisfG/view?usp=drive_link){:target="_blank"} to view the time-lapse for the 40m beam and tower installation.
 
 ![2019-field-day-40m-beam-and-tower-timelapse.png](/fieldday/images/2019-field-day-40m-beam-and-tower-timelapse.png)
