--- a/meetings/2025/202504.md
+++ b/meetings/2025/202504.md
@@ -14,8 +14,8 @@ Michael McClary, N6MO- Licensed since 1968, Retired from Lockheed Martin as Vice
 <iframe width="560" height="315" src="https://www.youtube.com/embed/_Km6BE1oNHc?si=RQZE9lcP4IUd8hp4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 ## Presentation materials
-* *PDF*: [[download](https://github.com/PAARA-org/paara.org-attachments/blob/main/meetings/2025/202504_Stealth_HF_Antennas_McClary.pdf?raw=true)] [[Docs Viewer](https://docs.google.com/viewer?url=https://github.com/PAARA-org/paara.org-attachments/blob/main/meetings/2025/202504_Stealth_HF_Antennas_McClary.pdf?raw=true)]
-* *PPT*: [[download](https://github.com/PAARA-org/paara.org-attachments/blob/main/meetings/2025/202504_Stealth_HF_Antennas_McClary.ppt?raw=true)] [[Docs Viewer](https://docs.google.com/viewer?url=https://github.com/PAARA-org/paara.org-attachments/blob/main/meetings/2025/202504_Stealth_HF_Antennas_McClary.ppt?raw=true)]
+* *PDF*: [[download](https://github.com/PAARA-org/paara.org-attachments/blob/main/meetings/2025/202504_Stealth_HF_Antennas_McClary.pdf?raw=true){:target="_blank"}] [[Docs Viewer](https://docs.google.com/viewer?url=https://github.com/PAARA-org/paara.org-attachments/blob/main/meetings/2025/202504_Stealth_HF_Antennas_McClary.pdf?raw=true){:target="_blank"}]
+* *PPT*: [[download](https://github.com/PAARA-org/paara.org-attachments/blob/main/meetings/2025/202504_Stealth_HF_Antennas_McClary.ppt?raw=true){:target="_blank"}] [[Docs Viewer](https://docs.google.com/viewer?url=https://github.com/PAARA-org/paara.org-attachments/blob/main/meetings/2025/202504_Stealth_HF_Antennas_McClary.ppt?raw=true){:target="_blank"}]
 
 {% include meetings-template.md %}
 
